# actix-angular-web

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  api_test.http
.cargo/: config
app/: README.md  angular.json  package-lock.json  package.json
app/e2e/src/: app.e2e-spec.ts
app/src/: index.html  styles.scss
app/src/app/: api.interceptor.spec.ts  api.interceptor.ts  apiinterceptor.interceptor.spec.ts  apiinterceptor.interceptor.ts  app-routing.module.ts  app.component.html  app.component.less  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  hero.service.ts  mock-heroes.ts  mock-posts.ts  post.ts
app/src/app/component/footer/: footer.component.less
app/src/app/component/header/: header.component.less
app/src/app/component/login/: login.component.html  login.component.less  login.component.ts
app/src/app/component/post/: post.component.html  post.component.ts
app/src/app/component/post-card/: post-card.component.html  post-card.component.ts
app/src/app/component/post-edit/: post-edit.component.less  post-edit.component.ts
app/src/app/components/delete-post-dialog/: delete-post-dialog.component.html
app/src/app/dashboard/: dashboard.component.less  dashboard.component.spec.ts  dashboard.component.ts
app/src/app/footer/: footer.component.html  footer.component.ts
app/src/app/header/: header.component.html  header.component.ts
app/src/app/hero-detail/: hero-detail.component.html  hero-detail.component.spec.ts  hero-detail.component.ts
app/src/app/heroes/: heroes.component.spec.ts  heroes.component.ts
app/src/app/heros/: heros.component.spec.ts  heros.component.ts
app/src/app/login/: login.component.html  login.component.ts
app/src/app/material/: material.module.ts
app/src/app/messages/: messages.component.ts
app/src/app/mock/: mock-posts.ts
app/src/app/model/: post.ts
app/src/app/post/: post.component.less  post.component.ts
app/src/app/post-card/: post-card.component.html  post-card.component.less  post-card.component.spec.ts  post-card.component.ts
app/src/app/post-list/: post-list.component.html  post-list.component.less  post-list.component.spec.ts  post-list.component.ts
app/src/app/posts/: post.service.ts
app/src/app/routes/: app-routing.module.ts
app/src/environments/: environment.prod.ts  environment.ts
back/: .env  Cargo.toml
back/config/: log4rs.yaml
back/migrations/2021-04-09-181811_create_posts/: up.sql
back/migrations/2021-06-30-153623_token/: down.sql  up.sql
back/migrations/2021-07-05-165846_post_add_digest/: down.sql  up.sql
back/prototype/: index.html
back/src/: api.rs  db.rs  error.rs  logger.rs  main.rs  models.rs  schema.rs  ssl.rs  util.rs
back/src/apis/: api_test.http  auth.rs  mod.rs  posts.rs  scratches.rs  scrathces.rs  statics.rs
config/: log4rs.yaml
prototype/tags/: tag_filter.html
src/: api.rs  db.rs  error.rs  lib.rs  logger.rs  main.rs  models.rs  schema.rs
(+38 files in other folders)
