[package]
name = "actix-angular-web"
version = "0.1.0"
authors = ["riton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde  = "1"
diesel = { version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
