[package]
name = "actix-angular-web"
version = "0.9.0"
authors = ["riton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3", features = ["rustls"] }
serde  = "1"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99.0", default-features = false, features = ["display", "error"] }
log = "0.4"
log4rs = { version = "1.0" }
config = "0.11"
#threadpool = "1.0"
r2d2 = "0.8"
rustls = "0.18"
anyhow = "1.0"