[package]
name = "actix-angular-web"
version = "0.25.0"
authors = ["riton"]
edition = "2018"
default-run = "actix-angular-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-session = "0.6"
actix-cors = "0.6"
serde  = "1"
serde_json  = "1"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
log4rs = { version = "1.0" }
config = "0.11"
r2d2 = "0.8"
rustls = "0.20"
rustls-pemfile = "1"
anyhow = "1.0"
rand = "0.8"
sha3 = "0.9"